--- a/configs/gnot/tube.yaml
+++ b/configs/gnot/tube.yaml
@@ -1,5 +1,5 @@
 flow_name: "tube"
-model_name: "mpnn"
+model_name: "gnot"
 if_training: True
 continue_training: False
 model_path: None
@@ -12,7 +12,7 @@ seed: 0
 training_type: "autoregressive" # "single_step"
 epochs: 50
 dataset:
-  saved_folder: "/data1/FluidData/cfdbench_data/tube/"
+  saved_folder: "/home/data2/cfdbench_hdf5/tube"
   case_name: "bc_prop_geo"
   reduced_resolution: 1
   reduced_batch: 1
@@ -27,17 +27,21 @@ dataloader:
   num_workers: 0
   pin_memory: False
 model:
-  neighbors: 1
-  delta_t: 0.1
-  hidden_features: 128
-  hidden_layers: 6
-  n_params: 5
-  var_id: 0 # u: 0, v: 1, ...
+  # trunk_size: 2
+  # branch_size: [4]
+  # space_dim: 2
+  # output_size: 2
+  n_layers: 4 # the number of attention layers
+  n_hidden: 96 # the number of feature dims
+  n_head: 4 # the number of heads
+  n_experts: 1 # the number of experts
+  n_inner: 4
+  mlp_layers: 3 # the number of layers in trunk mlp and output mlp
 optimizer:
   name: Adam
   lr: 0.001
-  weight_decay: 1.e-8
+  weight_decay: 0.001
 scheduler:
   name: "StepLR"
-  step_size: 10
+  step_size: 100
   gamma: 0.5
